# website

./: .gitignore  .travis.yml  CNAME  Gemfile  Procfile  README.md  Rakefile  _config.yml  about.html  about.markdown  blog.html  bower.json  config.rb  config.ru  cv.html  cv.markdown  default.nix  deploy.sh  gabysbrain-website.cabal  hologram_config.yml  index.html  news.md  package.json  proof_primer.html  publications.html  publications.markdown  rakefile  release.nix  research.html  site.hs  styledown_config.md  teaching.html  teaching.markdown  vis_personalization.afdesign
.circleci/: config.yml
bib/: all.bib
config/: newrelic.yml
css/: default.css  paper.css  pdf.css
data/: cv.yml  featured_projects.yml  sa_reading_group.json  site_nav_links.yml  social.yml
doc_assets/: _header.html
generator/: site.hs
lib/: citations.rb  cite_tmp.rb  date_helpers.rb  link_helpers.rb  middleman-styledown.rb  social_helpers.rb  tex2pdf.rb  tilt-multimarkdown.rb
nix/: hakyll.nix  sources.json
posts/: 2012-05-19-reproducable-research.html  2012-05-19-reproducable-research.markdown  2012-06-14-multiblog.html  2012-06-14-multiblog.markdown  2012-08-29-research-notebook.html  2012-08-29-research-notebook.markdown  2013-10-29-public-slash-private-git-for-research.html  2014-01-06-learning-what-i-can-do-in-a-day.html  2015-10-29-decision-making-in-visualization.html  2017-02-03-open-letter-to-donald-trump.html
public/: BingSiteAuth.xml  atom.xml  cv.html  index.html  sitemap.xml
site/: about.markdown  cv.markdown  index.html  news.md  proof_primer.markdown  (+2 more)
(+189 files in other folders)
