name:               gabysbrain-website
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            PublicDomain

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , containers
                  , filepath
                  , process
                  , pandoc
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010

